# c_function_sweeper

./: Cargo.toml
src/: main.rs
test/c_test_files_1/: header.c  header.h  main.c
test/c_test_files_1/deep_folder/: deep.h
