[package]
name = "c_function_sweep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
tree-sitter = "0.22.6"
tree-sitter-c = "0.21.4"
walkdir = "2.5.0"

[build-dependencies]
cc="*"
